--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,9 @@ services:
     container_name: phpmyadmin
     environment:
      - PMA_ARBITRARY=1
+     - PMA_HOST=db
+     - PMA_USER=laravel
+     - PMA_PASSWORD=password
     restart: always
     ports:
      - 8080:80
