--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,10 @@ jobs:
             - checkout
             # CircleCI に登録した秘密鍵を呼び出す
             - add_ssh_keys:
+                fingerprints:
+                  - "2f:a0:ba:d4:e9:9b:6a:d7:3a:25:f7:e9:cb:c3:71:fd"
             # CircleCI に登録した環境変数を使って SSH
-            - run: ssh ${USER_NAME}@${HOST_NAME} 'cd ~/b_game_32070 && git pull'
+            - run: ssh ${USER_NAME}@${HOST_NAME} 'cd ~/b_game_32070 && git pull origin main'
 
 workflows:
     version: 2
